# opkssh-wrapper

./: .pre-commit-config.yaml  AGENTS.md  README.md  hatch_build.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: build-nuitka.sh
src/opkssh_wrapper/: __init__.py  config.py  i18n.py  main.py  ssh.py
src/opkssh_wrapper/locale/en/LC_MESSAGES/: opkssh_wrapper.po
tests/: test_config.py  test_i18n.py  test_main.py  test_ssh.py
typings/tomli/: __init__.pyi
