[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opkssh-wrapper"
version = "0.1.0"
description = "A thin shim that transparently injects opkssh into SSH workflows"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dependencies = [
    "tomli>=1.0; python_version < '3.11'",
]

[project.scripts]
opkssh-wrapper = "opkssh_wrapper.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pyright>=1.1",
    "bandit>=1.7",
    "pip-audit>=2.0",
    "safety>=3.0",
    "pip-licenses>=4.0",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "S",
    "T20",
    "SIM",
    "TCH",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S108"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"

[tool.bandit]
skips = ["B603", "B404", "B606"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["opkssh_wrapper"]

[tool.coverage.report]
show_missing = true
